<resources>

    <string name="app_name">Tuturu</string>

    <!--  Titles  -->
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_tutor">TutorActivity</string>

    <!--  Login Screen  -->
    <string name="btn_login">Iniciar Sesión</string>
    <string name="txt_register"><u>Regístrate</u></string>
    <string name="txt_no_account">¿No tienes una cuenta?</string>

    <!--  Register  -->
    <string name="txt_register_title">Regístrate</string>
    <string name="txt_student">Estudiante</string>
    <string name="txt_tutor">Tutor</string>
    <string name="txt_help">Soy un</string>
    <string name="txt_subjects">Materias</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_register">Registrar</string>

    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellido</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_ci">Cédula de Identidad</string>
    <string name="hint_phone">Teléfono</string>

    <!--  Pantalla de Peticiones  -->
    <string name="title_peticiones">Peticiones</string>
    <string name="btn_aceptar">Aceptar</string>

    <!--   Placeholders     -->
    <string name="ph_ti_email">Correo Electrónico</string>
    <string name="ph_ti_password">Contraseña</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Chat</string>
    <string name="menu_slideshow">Actividad</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_search">Solicitar Tutor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--  Profile Screen  -->
    <string name="txt_name">Nombre</string>
    <string name="txt_age">Edad</string>
    <string name="txt_ci">Cedula</string>
    <string name="txt_phone">Telefono</string>
    <string name="txt_email">Email</string>
    <string name="txt_titlePetition">Solicitar Tutor</string>
    <string name="txt_petition">Tu solicitud</string>
    <string name="txt_fecha">Fecha a solicitar</string>
    <string name="btn_solicitar">Solicitar</string>
    <string name="txt_Calendar">Calendario</string>

</resources>